# python-api-examples

./: .gitignore  LICENSE  README.md
fastapi/: run.sh
fastapi/app/: main.py
fastapi/app/api/: api.py
fastapi/app/core/: config.py
fastapi/app/schemas/: __init__.py  health.py
fastapi_project/: pyproject.toml
fastapi_project/app/: auth.py  config.py  database.py  main.py  models.py
fastapi_project/app/api/: api.py  deps.py
fastapi_project/app/schemas/: __init__.py  user.py
flask/: config.py  pyproject.toml
flask/app/: __init__.py
flask/app/api/: routes.py
flask_project/: pyproject.toml
flask_project/app/: __init__.py  config.py  models.py
flask_project/app/api/: auth.py
