[tool.poetry]
name = "app"
version = "0.2.0"
description = ""
authors = ["ChristopherGS"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "1.1.2"
python-dotenv = "0.16.0"
bcrypt = "^3.2.0"
PyJWT = "^2.1.0"
Flask-Cors = "^3.0.10"
Flask-Bcrypt = "^0.7.1"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "6.0.2"
pytest-asyncio = "^0.14.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

